# anykeys

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
client/: CMakeLists.txt  dllmain.cpp
client/SAMP-API/: .clang-format  .gitignore  CMakeLists.txt  LICENSE
client/SAMP-API/include/sampapi/: AimStuff.h  Animation.h  CActor.h  CActorPool.h  CAudio.h  CAudioStream.h  CCamera.h  CChat.h  CChatBubble.h  CConfig.h  CCustomModels.h  CCustomModelsPool.h  CDeathWindow.h  CDialog.h  CDownloadWindow.h  CDownloadedFilesPool.h  CEntity.h  CFont.h  CFonts.h  CGame.h  CGangZonePool.h  CHelpDialog.h  CHttpClient.h  CInput.h  CLabel.h  CLabelPool.h  CLicensePlate.h  CLocalPlayer.h  CMakeLists.txt  CMatrix.h  CMenu.h  CMenuPool.h  CNetGame.h  CNetStats.h  CObject.h  CObjectEdit.h  CObjectMaterialText.h  CObjectPool.h  CObjectSelection.h  CPed.h  (+32 more)
client/SAMP-API/include/sampapi/0.3.7-R1/: AimStuff.h  Animation.h  CActor.h  CActorPool.h  CAudio.h  CAudioStream.h  CCamera.h  CChat.h  CChatBubble.h  CConfig.h  CDeathWindow.h  CDialog.h  CEntity.h  CFonts.h  CGame.h  CGangZonePool.h  CHelpDialog.h  CHttpClient.h  CInput.h  CLabel.h  CLabelPool.h  CLicensePlate.h  CLocalPlayer.h  CMakeLists.txt  CMenu.h  CMenuPool.h  CNetGame.h  CNetStats.h  CObject.h  CObjectEdit.h  CObjectMaterialText.h  CObjectPool.h  CObjectSelection.h  CPed.h  CPickupPool.h  CPlayerInfo.h  CPlayerPool.h  CPlayerTags.h  CRemotePlayer.h  CScoreboard.h  (+21 more)
client/SAMP-API/include/sampapi/0.3.7-R3-1/: AimStuff.h  Animation.h  CActor.h  CActorPool.h  CAudio.h  CAudioStream.h  CCamera.h  CChat.h  CChatBubble.h  CConfig.h  CDeathWindow.h  CDialog.h  CEntity.h  CFont.h  CFonts.h  CGame.h  CGangZonePool.h  CHelpDialog.h  CHttpClient.h  CInput.h  CLabel.h  CLabelPool.h  CLicensePlate.h  CLocalPlayer.h  CMakeLists.txt  CMenu.h  CMenuPool.h  CNetGame.h  CNetStats.h  CObject.h  CObjectEdit.h  CObjectMaterialText.h  CObjectPool.h  CObjectSelection.h  CPed.h  CPickupPool.h  CPlayerInfo.h  CPlayerPool.h  CPlayerTags.h  CRemotePlayer.h  (+20 more)
client/SAMP-API/include/sampapi/0.3.7-R5-1/: AimStuff.h  Animation.h  CActor.h  CActorPool.h  CAudio.h  CAudioStream.h  CCamera.h  CChat.h  CChatBubble.h  CConfig.h  CDeathWindow.h  CDialog.h  CEntity.h  CFont.h  CFonts.h  CGame.h  CGangZonePool.h  CHelpDialog.h  CHttpClient.h  CInput.h  CLabel.h  CLabelPool.h  CLicensePlate.h  CLocalPlayer.h  CMenu.h  CMenuPool.h  CNetGame.h  CNetStats.h  CObject.h  CObjectEdit.h  CObjectMaterialText.h  CObjectPool.h  CObjectSelection.h  CPed.h  CPickupPool.h  CPlayerInfo.h  CPlayerPool.h  CPlayerTags.h  CRemotePlayer.h  CScoreboard.h  (+19 more)
client/SAMP-API/include/sampapi/0.3.DL-1/: AimStuff.h  Animation.h  CActor.h  CActorPool.h  CAudio.h  CAudioStream.h  CCamera.h  CChat.h  CChatBubble.h  CConfig.h  CCustomModels.h  CCustomModelsPool.h  CDeathWindow.h  CDialog.h  CDownloadWindow.h  CDownloadedFilesPool.h  CEntity.h  CFont.h  CFonts.h  CGame.h  CGangZonePool.h  CHelpDialog.h  CHttpClient.h  CInput.h  CLabel.h  CLabelPool.h  CLicensePlate.h  CLocalPlayer.h  CMakeLists.txt  CMenu.h  CMenuPool.h  CNetGame.h  CNetStats.h  CObject.h  CObjectEdit.h  CObjectMaterialText.h  CObjectPool.h  CObjectSelection.h  CPed.h  (+25 more)
client/SAMP-API/src/sampapi/: CMakeLists.txt  CPoint.cpp  CRect.cpp  CVector.cpp  sampapi.cpp
client/SAMP-API/tools/: make_headers.py
client/include/: SetHooks.h
client/raknet/: BigTypes.h  BitStream.h  CMakeLists.txt  PacketPriority.h  RakPeerInterface.h  RakServer.h  RakServerInterface.h  SocketLayer.cpp  TEABlockEncryptor.cpp
client/src/: SetHooks.cpp
samp-server-api/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  sapi.vcxproj  sapi.vcxproj.filters  serverapi.sln
samp-server-api/include/: CActorPool.h  CConsole.h  CGangzonePool.h  CLabelPool.h  CMenuPool.h  CObjectPool.h  CPickupPool.h  CPlayer.h  CPlayerPool.h  CTextDrawPool.h  CVehicle.h  CVehiclePool.h  CnetGame.h  main.h  sync.h
samp-server-api/include/basics/: CFilterscripts.h  CGameMode.h  CMenu.h  CarModInfo.h  SpawnInfo.h  matrix.h  vector.h
samp-server-api/include/raknet/: BitStream.h  NetworkTypes.h  PacketPriority.h  RakServerInterface.h  RakServerInterface_vtbl.h
samp-server-api/src/: CConsole.cpp  CFilterScript.cpp  CGamemode.cpp  CNetGame.cpp  CVEehiclePool.cpp  CVehicle.cpp  amxplugin.cpp
(+237 files in other folders)
